# scope-stream_diffusion_v1

./: ADAPTATION_NOTES.md  CLAUDE.md  INSTALL.md  README.md  pyproject.toml
src/scope_streamdiffusion/: __init__.py  controlnet.py  pipeline.py  schema.py  trt_engines.py
src/scope_streamdiffusion/_trt/: __init__.py  builder.py  engine.py  models.py  utilities.py
