[project]
name = "scope-streamdiffusion"
version = "0.1.0"
description = "Real-time Stable Diffusion pipeline using StreamDiffusion for Daydream Scope"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "diffusers",
    "compel",
    "logfire",
    "numpy",
    "pillow",
]

[project.entry-points."scope"]
scope_streamdiffusion = "scope_streamdiffusion"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scope_streamdiffusion"]
